# OS_MAI_LABS

./: .gitignore  CMakeLists.txt
.devcontainer/: devcontainer.json
lab_1/: CMakeLists.txt  main.cpp
lab_1/src/: child.cpp  parent.cpp  utils.h
lab_1/tests/: test.cpp
lab_2/: CMakeLists.txt  main.cpp
lab_2/src/circle_area/: circle_area.h
lab_2/src/monte_carlo/: monte_carlo.h
lab_2/src/threadwork/: threadwork.cpp  threadwork.h
lab_2/tests/: test.cpp
lab_3/: CMakeLists.txt
lab_3/src/: child.cpp  parent.cpp  parent.h  utils.h
lab_3/src/consts/: Consts.h
lab_3/src/sharedFile/: SharedFile.cpp  SharedFile.h
lab_3/src/sharedMem/: SharedMem.cpp  SharedMem.h
lab_3/src/sharedSem/: SharedSem.cpp  SharedSem.h
lab_3/tests/: test.cpp
lab_4/: CMakeLists.txt  main.cpp  mainDynamic.cpp
lab_4/src/: f1.cpp  f1.h  f2.cpp  f2.h
lab_4/tests/: test.cpp
lab_8/: log.txt
